# ComfyUI_Jags_VectorMagic

./: JagsClipseg.py  README.md  SVG_convert.py  __init__.py  base.py  install.py  pyproject.toml  requirements.txt  yolo_seg.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
Web/: readme.md
js/: label.js  ui_output.js  ui_output_dispatch.js
