[project]
name = "comfyui_jags_vectormagic"
description = "ComfyUI_Jags_VectorMagic  A collection of nodes to explore Vector and image manipulation"
version = "1.0.3"
license = { file = "LICENSE" }
dependencies = ["librosa", "numpy", "Pillow", "scipy", "color-matcher", "matplotlib", "clip-interrogator", "simpleeval", "ultralytics", "ultralyticsplus", "CLIPSeg", "OpenCV"]

[project.urls]
Repository = "https://github.com/jags111/ComfyUI_Jags_VectorMagic"

[tool.comfy]
PublisherId = "jags111"
DisplayName = "ComfyUI_Jags_VectorMagic"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
